--- a/slides_c32.Rmd
+++ b/slides_c32.Rmd
@@ -5,6 +5,7 @@ header-includes:
    - \usepackage{multicol}
 output: 
   beamer_presentation:
+    latex_engine: lualatex
     slide_level: 2
     df_print: kable
     theme: "AnnArbor"
@@ -14,7 +15,7 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(fig.height = 5)
 # knitr::opts_chunk$set(echo = FALSE)
-options(width=60)
+options(width=55)
 ```
 
 # Course outline
@@ -44,11 +45,15 @@ options(width=60)
 ```{r, child="inference_R.Rmd"}
 ```
 
-xxx from here
-
 # Writing reports
 
 ```{r, child="reports_R.Rmd"}
+```
+
+
+# Tidying and organizing data
+
+```{r, child="tidying_R.Rmd"}
 ```
 
 
