--- a/tidying_R.Rmd
+++ b/tidying_R.Rmd
@@ -90,9 +90,9 @@ pigs2 %>% group_by(feed) %>%
 
 Feed 3 is best, feed 1 worst.
 
-## Should we have any concerns about the ANOVA?  xxx chat under
+## Should we have any concerns about the ANOVA?  
 
-```{r, fig.height=3}
+```{r, fig.height=4.1}
 ggplot(pigs2,aes(x=feed,y=weight))+geom_boxplot()
 ```
 
@@ -139,7 +139,7 @@ tb2
 ```
 
 ## Separating
-- 4 columns, but 5 variables, since `genage` xxx contains both gender and
+- 4 columns, but 5 variables, since `genage` contains both gender and
 age group. Split that up using separate.
 - `separate` needs 3 things:
   - what to separate (no quotes needed),
@@ -158,7 +158,7 @@ tb3
 
 ## In practice...
 
-- instead of doing the pipe one step at a time, you *debug* xxx it one step at
+- instead of doing the pipe one step at a time, you *debug* it one step at
 a time, and when you have each step working, you use that step’s
 output as input to the next step, thus:
 ```{r}
@@ -170,15 +170,13 @@ tb %>% gather(genage, freq, m04:fu, na.rm = T) %>%
 each line is incomplete, so that R knows more is to come.
 - I like to put the pipe symbol on the end of the line.
 
-## Total tuberculosis cases by year (some of the years)
+## Total tuberculosis cases by year (some of the years) 
 
 ```{r}
 tb3 %>% group_by(year) %>%
   summarize(cases = sum(freq)) %>%
-  filter(between(year, 1990, 1999))
+  filter(between(year, 1991, 1998))
 ```
-
-xxx
 
 - Something very interesting happened between 1994 and 1995.
 
@@ -218,9 +216,9 @@ d
 ```
 
 ## The days
-- Column `element` xxx contains names of two different variables, that
+- Column `element` contains names of two different variables, that
 should each be in separate column.
-- Distinct from eg. `m1524` xxx in tuberculosis data, that contained levels of
+- Distinct from eg. `m1524` in tuberculosis data, that contained levels of
 two different factors, handled by separate.
 - Untangling names of variables handled by `spread`:
 
@@ -291,9 +289,9 @@ ggplot(...,aes(x=date,y=temperature))
 only we have two temperatures, one a max and one a min, that we
 want to keep separate.
 
-- xxx The trick: combine `tmax` and `tmin` together into one column, keeping
+- The trick: combine `tmax` and `tmin` together into one column, keeping
 track of what kind of temp they are. (This actually same format as
-untidy `weather`) Are making `weather_tidy`
+untidy `weather`.) Are making `weather_tidy`
 untidy for purposes of drawing graph only.
 - Then can do something like
 ```{r, eval=F}
@@ -318,9 +316,9 @@ ggplot(aes(x=date,y=temperature,colour=maxmin))+
 geom_line() -> g
 ```
 
-## The plot xxx
+## The plot 
 
-```{r, fig.height=4}
+```{r, fig.height=4.5}
 g
 ```
 
@@ -343,5 +341,288 @@ g
   \texttt{gather} and \texttt{spread} are opposites; \texttt{separate}
   and \texttt{unite} are opposites.
 
-xxx end for now
+## Doing things with data frames
+Let’s go back to our Australian athletes: 
+
+```{r}
+athletes
+```
+
+## Choosing a column
+
+```{r}
+athletes %>% select(Sport)
+```
+
+## Choosing several columns
+
+```{r}
+athletes %>% select(Sport,Hg,BMI)
+```
+
+## Choosing consecutive columns
+
+```{r}
+athletes %>% select(Sex:WCC)
+```
+
+## Choosing all-but some columns
+
+```{r}
+athletes %>% select(-(RCC:LBM))
+```
+
+## Select-helpers
+Other ways to select columns: 
+
+- `starts_with` something
+- `ends_with` something
+- `contains` something
+- `matches` a “regular expression”
+- `num_range` like x1 to x3
+- `everything()` all the columns
+
+## Columns whose names begin with S 
+
+```{r}
+athletes %>% select(starts_with("S"))
+```
+
+## Columns whose names end with C
+
+either uppercase or lowercase:
+
+```{r}
+athletes %>% select(ends_with("c"))
+```
+
+## Column names containing letter R
+
+```{r}
+athletes %>% select(contains("r"))
+```
+
+## Exactly two characters, ending with T
+
+In regular expression terms, this is `^.t$`:
+
+- `^` means “start of text”
+- `.` means “exactly one character, but could be anything”
+- `$` means “end of text”.
+```{r}
+athletes %>% select(matches("^.t$"))
+```
+
+## Displaying some numbered columns 1/2
+
+Make up a data frame to illustrate. This `sample` generates 5 random values
+equally likely to be anything 0–9 (without replacement): 
+
+```{r}
+(d = tibble(
+  y  = sample(0:9, 5),
+  x1 = sample(0:9, 5),
+  x2 = sample(0:9, 5),
+  x3 = sample(0:9, 5)
+))
+```
+
+## Just display x2 and x3:
+```{r}
+d %>% select(num_range("x", 2:3))
+```
+
+## Choosing rows by number 
+
+```{r, paged.print=F}
+athletes %>% slice(16:25)
+```
+
+## Non-consecutive rows 
+
+```{r, paged.print=F}
+athletes %>% slice(c(10, 13, 17, 42))
+```
+
+## A random sample of rows
+
+```{r, paged.print=F}
+athletes %>% sample_n(8)
+```
+
+## Rows for which something is true
+
+```{r}
+athletes %>% filter(Sport == "Tennis")
+```
+
+## More complicated selections
+
+```{r}
+athletes %>% filter(Sport == "Tennis", RCC < 5)
+```
+
+## Either/Or
+
+```{r}
+athletes %>% filter(Sport == "Tennis" | RCC > 5)
+```
+
+## Sorting into order
+
+```{r}
+athletes %>% arrange(RCC)
+```
+
+## Breaking ties by another variable
+
+```{r}
+athletes %>% arrange(RCC,BMI)
+```
+
+## Descending order
+
+```{r}
+athletes %>% arrange(desc(BMI))
+```
+
+## “The top ones”
+
+
+```{r}
+athletes %>% arrange(desc(Wt)) %>% slice(1:7) %>%
+  select(Sport, Wt)
+```
+
+## Create new variables from old ones
+
+```{r}
+athletes %>% mutate(wt_lb = Wt * 2.2) %>%
+  select(Sport, Wt, wt_lb)
+```
+
+## Turning the result into a number
+Output is always data frame unless you explicitly turn it into something
+else, eg. the weight of the heaviest athlete, as a number:
+
+```{r}
+athletes %>% arrange(desc(Wt)) %>% pluck("Wt", 1)
+```
+
+Or the 20 heaviest weights in descending order:
+
+
+```{r}
+athletes %>% arrange(desc(Wt)) %>%
+  slice(1:20) %>% pluck("Wt")
+```
+
+## Another way to do the last one
+
+```{r}
+athletes %>% arrange(desc(Wt)) %>%
+  slice(1:20) %>% pull("Wt")
+```
+
+`pull` grabs the column you name *as a vector* (of whatever it contains).
+
+## To find the mean height of the women athletes
+Two ways:
+
+```{r}
+athletes %>% group_by(Sex) %>% summarize(m = mean(Ht))
+```
+
+or
+
+```{r}
+athletes %>% filter(Sex == "female") %>% 
+  summarize(m = mean(Ht))
+```
+
+## Summary of data selection/arrangement "verbs"
+
+ \begin{tabular}{lp{0.7\textwidth}}
+    Verb & Purpose\\
+    \hline
+    \texttt{select} & Choose columns\\
+    \texttt{print} & Display non-default \# of rows/columns \\
+    \texttt{slice} & Choose rows by number\\
+    \texttt{sample\_n} & Choose random rows\\ 
+    \texttt{filter} & Choose rows satisfying conditions \\
+    \texttt{arrange}& Sort in order by column(s) \\
+    \texttt{mutate} & Create new variables\\
+    \texttt{group\_by} & Create groups to summarize by\\
+    \texttt{summarize} & Calculate summary statistics (by groups if defined)\\
+    \texttt{pluck} & Extract items from data frame\\
+    \texttt{pull} & Extract a single column from a data frame as a vector\\
+    \hline
+  \end{tabular}
+  
+  
+## Looking things up in another data frame
+Recall the tuberculosis data set, tidied: 
+```{r}
+tb3
+```
+
+What are actual names of those countries in `iso2`?
+
+## Actual country names
+Found actual country names to go with those abbreviations, in spreadsheet: 
+
+```{r}
+library(readxl)
+f=tempfile()
+my_url="http://www.utsc.utoronto.ca/~butler/c32/ISOCountryCodes081507.xlsx"
+download.file(my_url, f)
+country_names = read_excel(f)
+```
+
+## The country names
+
+```{r}
+country_names
+```
+
+## Looking up country codes
+Matching a variable in one data frame to one in another is called a **join**
+(database terminology):
+
+```{r}
+tb3 %>% left_join(country_names, by = c("iso2" = "Code_UC"))
+```
+
+## Total cases by country
+
+
+```{r}
+tb3 %>% group_by(iso2) %>% summarize(cases = sum(freq)) %>%
+  left_join(country_names, by = c("iso2" = "Code_UC")) %>%
+  select(Country, cases)
+```
+
+## or even sorted in order
+
+```{r}
+tb3 %>% group_by(iso2) %>% summarize(cases = sum(freq)) %>%
+  left_join(country_names, by = c("iso2" = "Code_UC")) %>%
+  select(Country, cases) %>% 
+  arrange(desc(cases))
+```
+
+## Comments
+
+- This is probably not quite right because of:
+  - the 1994-1995 thing
+  - there is at least one country in `tb3` that was not in `country_names` (the NA above). Which?
+  
+```{r}
+tb3 %>% 
+  anti_join(country_names, by = c("iso2" = "Code_UC")) %>% 
+  distinct(iso2)
+```
+  
+
+xxx end of section; check from here
 
