--- a/slides_c32.Rmd
+++ b/slides_c32.Rmd
@@ -63,6 +63,12 @@ options(width=55)
 
 xxx from here later
 
+# Case study 3: Asphalt
+
+```{r, child="asphalt.Rmd"}
+```
+
+
 # the end of the notes
 
 # template
